# open-source-marginal-emissions

./: .gitignore  404.html  COMMERCIAL-LICENSE.md  COMMERCIAL-TERMS.md  LICENSE  LICENSE.txt  NOTICE.MD  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  sitemap.xml
.wheel/: pyvenv.cfg
ACKNOWLEDGEMENTS/: index.html
CORE_CONCEPTS_AND_DEFINITIONS/: index.html
PROJECT_ROADMAP/: index.html
configs/grid/: download_request_carbontracker.json
configs/weather/: download_request_land.json  download_request_land_copy.json  download_request_land_testing.json  download_request_world.json
data/: README.md
information/: ACKNOWLEDGEMENTS.md  CORE_CONCEPTS_AND_DEFINITIONS.md  PROJECT_ROADMAP.md  ROADMAP.md  index.md
input/: download_request.json  download_request_land.json  download_request_world.json
notebooks/: gdr_testing.ipynb  wdr_testing.ipynb  weather_data_retrieval.ipynb
osme-common-utilities-documentation/: index.html
osme-common-utilities-documentation/codebase/: index.html
osme-common-utilities-documentation/quickstart/: index.html
osme-data-cleaning-and-joining-documentation/: index.html
osme-data-cleaning-and-joining-documentation/codebase/: index.html
osme-data-cleaning-and-joining-documentation/quickstart/: index.html
osme-grid-data-retrieval-documentation/: index.html
osme-grid-data-retrieval-documentation/codebase/: index.html
osme-grid-data-retrieval-documentation/quickstart/: index.html
osme-marginal-emissions-modelling-documentation/: index.html
osme-marginal-emissions-modelling-documentation/codebase/: index.html
osme-marginal-emissions-modelling-documentation/quickstart/: index.html
osme-weather-data-retrieval-documentation/: index.html
osme-weather-data-retrieval-documentation/codebase/: index.html
osme-weather-data-retrieval-documentation/configuration/: index.html
osme-weather-data-retrieval-documentation/quickstart/: index.html
osme-weather-data-retrieval-documentation/user-guide/: index.html
search/: search_index.json
src/weather_pipeline/providers/: weather_data_retrieval.ipynb
weather_data_retrieval/: README.md  __init__.py  main.py  main_world.sh  mkdocs.yml  runner.py
weather_data_retrieval/io/: cli.py  prompts.py
weather_data_retrieval/sources/: cds_era5.py  open_meteo.py
weather_data_retrieval/utils/: data_validation.py  file_management.py  logging.py  session_management.py
