[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-data-retrieval"
version = "0.1.0"
description = "ERA5 / Open-Meteo retrieval with interactive wizard or batch config"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Daniel Kaupa"}]
license = {text = "MIT"}
dependencies = [
  "cdsapi>=0.6.1",
  "requests>=2.31",
  "pyyaml>=6.0",     
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1.2"]

[project.scripts]
wdr = "weather_data_retrieval.main:main"

[tool.setuptools.packages.find]
include = ["weather_data_retrieval"]