[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-data-retrieval"
version = "1.0.0"
description = "Streamlined CDS & weather API retrieval tool (interactive or automatic) with validation, logging, and retries."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Daniel Kaupa"}]
license = {text = "LICENSE.txt"}
dependencies = [
  "cdsapi>=0.6.1",
  "requests>=2.31",
  "tqdm>=4.66"
]

classifiers = [
  "License :: Free for non-commercial use"
]

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1.2"]

[project.scripts]
wdr = "weather_data_retrieval.main:main"


[tool.setuptools]
license-files = ["LICENSE*", "COPYING*", "NOTICE*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["weather_data_retrieval*"]